API documentation completed.
OpenAPI\Swagger documentation provided (for now)! Endpoints haven't been tested yet.
