# Api/Routes/RoleRoutes.py
@@ -15,7 +15,10 @@ def GetRoleService():
 def GetRole(roleId:str):
     roleService=next(GetRoleService())
     role=roleService.GetRolebyId(roleId)
-    return role
+    return jsonify({"success":True,"data":{
+        "roleName":role.Name,
+        "description":role.Description
+    }}),201
 
 @RoleBlueprint.route("/listroles",methods=["GET"])
 def ListRoles():
@@ -37,9 +40,12 @@ def AddRole():
 
     roleService=next(GetRoleService())
     roleId=roleService.AddRole(roleName,description)
-    return jsonify({"success":True,"data":f"Role added: {roleId}"}),201
+    return jsonify({"success":True,"data":{
+        "message":f"Role added successfully",
+        "roleId":roleId
+    }}),201
 
-@RoleBlueprint.route("/update/<string:roleId>",methods=["PUT"])
+@RoleBlueprint.route("/updaterole/<string:roleId>",methods=["PUT"])
 def UpdateRole(roleId:str):
     data=request.json
     roleName=data.get("roleName")
@@ -50,10 +56,16 @@ def UpdateRole(roleId:str):
 
     if role_Id:
         roleService.UpdateRole(roleId,roleName,description)
-        return jsonify({"success":True,"data":f"Role updated"}),200
-    return jsonify({"success":False,"data":f"Role Id cannot be found"}),500
+        return jsonify({"success":True,"data":{
+            "message":f"Role updated",
+            "roleId":roleId
+        }}),200
+    return jsonify({"success":False,"data":{
+        "message":f"Role Id cannot be found",
+        "roleId":roleId
+    }}),500
     
-@RoleBlueprint.route("/delete/<string:roleId>",methods=["DELETE"])
+@RoleBlueprint.route("/deleterole/<string:roleId>",methods=["DELETE"])
 def DeleteRole(roleId:str):
     roleService=next(GetRoleService())
     role_Id=roleService.GetRolebyId(roleId)
@@ -61,6 +73,9 @@ def DeleteRole(roleId:str):
     if role_Id:
         result=roleService.DeleteRole(roleId)
         if result:
-            return jsonify({"success":True,"data":f"Role deleted: {roleId}"}),200
+            return jsonify({"success":True,"data":{
+                "message":f"Role deleted",
+                "roleId":roleId
+            }}),200
         return jsonify({"success":False,"data":f"An error occured"}),400
     return jsonify({"success":False,"data":f"Role cannot be found"}),400
